--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ deploy:
 
     bucket: freelec-springboot-buildy
     region: ap-northeast-2
-    skip_cleanup: true
+    cleanup: true
     acl: private
     local_dir: deploy
     wait_until_deployed: true
