--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ deploy:
     cleanup: true
     acl: private
     local_dir: deploy
-    wait_until_deployed: true
+    wait-until-deployed: true
 
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY
@@ -57,4 +57,4 @@ deploy:
     deployment_group: freelec-springboot2-webservice-group
 
     region: ap-northeast-2
-    wait_until_deployed: true
+    wait-until-deployed: true
